--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -1,30 +1,36 @@
 <h1>Edit Profile</h1>
 
 <%= form_for :user, url: user_update_path do |f|%>
-	
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
-  </div>	
 
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
-  </div>
+<div class="field">
+  <%= f.label :first_name %><br />
+  <%= f.text_field :first_name %>
+</div>	
 
-  <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :address %><br />
-    <%= f.text_field :address %>
-  </div>
+<div class="field">
+  <%= f.label :last_name %><br />
+  <%= f.text_field :last_name %>
+</div>
 
-  <div class="actions my-5">
-		<%= link_to 'Cancel', user_show_path, class: 'btn' %>
-		<%= f.submit 'Save', class: 'btn btn-success' %>
-	</div>
+<div class="field">
+  <%= f.label :city %><br />
+  <%= f.text_field :city %>
+</div>
+
+<div class="field">
+  <%= f.label :address %><br />
+  <%= f.text_field :address %>
+</div>
+
+<div class="field">
+  <%= f.label :adress2 %><br />
+  <%= f.text_field :adress2 %>
+</div>
+
+
+<div class="actions my-5">
+  <%= link_to 'Cancel', user_show_path, class: 'btn' %>
+  <%= f.submit 'Save', class: 'btn btn-success' %>
+</div>
 
 <% end -%>
