--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,5 +1,4 @@
 <h1> My Profile </h1>
-<%= link_to 'Edit', user_edit_path, class: 'btn btn-primary' %>
 
 <div>
 	<label for=""> First Name : </label>
@@ -20,3 +19,10 @@
 	<label for=""> Address : </label>
 	<%= @user.address %>
 </div>
+
+<div>
+	<label for=""> Address2 : </label>
+	<%= @user.adress2 %>
+</div>
+
+<%= link_to 'Edit', user_edit_path, class: 'btn btn-primary' %>
